--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,47 @@ on:
       - setup.py
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.9']
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install https://github.com/nucleic/cppy/tarball/main
+      - name: Install project
+        run: |
+          pip install -e .
+      - name: Install dependencies
+        run: |
+          pip install -r lint_requirements.txt
+      - name: Isort
+        run: |
+          isort atom -c
+          isort examples -c
+          isort tests -c
+      - name: Black
+        run: |
+          black atom --check
+          black examples --check
+          black tests --check
+      - name: Flake8
+        run: |
+          flake8 atom
+          flake8 examples
+          flake8 tests
+      - name: Run Mypy
+        run: |
+          mypy atom
+          mypy examples
   types:
     name: Type checking
     runs-on: ubuntu-latest
@@ -63,10 +104,10 @@ jobs:
         env:
           CPPFLAGS: --coverage
         run: |
-          python setup.py develop
+          pip install -e .
       - name: Test with pytest
         run: |
-          pip install pytest-cov
+          pip install -r test_requirements.txt
           python -X dev -W error -m pytest tests --ignore=tests/typing --cov --cov-report xml -v
       - name: Generate C++ coverage reports
         if: (github.event_name != 'schedule' && matrix.os != 'windows-latest')
