--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,4 @@
+# flake8 is the only tool not supporting pyproject.toml config
 [flake8]
 exclude =
     .git,
@@ -11,16 +12,3 @@ ignore = E203, E266, E501, W503, E731
 max-line-length = 80
 max-complexity = 19
 select = B,C,E,F,W,T4,B9
-
-[mypy]
-follow_imports = normal
-strict_optional = true
-
-[isort]
-multi_line_output = 3
-include_trailing_comma = true
-combine_as_imports = true
-force_grid_wrap = 0
-use_parentheses = true
-line_length = 88
-skip = pyvisa-py/__init__.py
