duplicate some information pyproject in setup.cfg
This comes from the lack of PEP621 support in setuptools

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,34 @@
+# --------------------------------------------------------------------------------------
+# Copyright (c) 2021, Nucleic Development Team.
+#
+# Distributed under the terms of the Modified BSD License.
+#
+# The full license is in the file LICENSE, distributed with this software.
+# --------------------------------------------------------------------------------------
+# FIXME remove once setuptool supports PEP 621
+[metadata]
+name = atom
+author = The Nucleic Development Team
+author_email = sccolbert@gmail.com
+maintainer_email = m.dartiailh@gmail.com
+url = https://github.com/nucleic/atom
+description = Memory efficient Python objects
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+license= BSD
+classifiers =
+    # https://pypi.org/pypi?%3Aaction=list_classifiers
+    License :: OSI Approved :: BSD License
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: Implementation :: CPython
+platforms = Linux, Windows, Mac
+
+
 # flake8 is the only tool not supporting pyproject.toml config
 [flake8]
 exclude =
