ci: run test against dev
not sure why it failed but it was likely to mess up coverage anyway

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
         env:
           CPPFLAGS: --coverage
         run: |
-          pip install .
+          pip install -e .
       - name: Test with pytest
         run: |
           pip install -r test_requirements.txt
