--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build sdist
         run: |
           pip install --upgrade pip
-          pip install wheel
-          python setup.py sdist
+          pip install wheel build
+          python -m build . -s
       - name: Test sdist
         run: |
           pip install pytest
