ci: fix building releases

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Test sdist
         run: |
           pip install pytest
-          pip install --no-index --find-links dist atom
+          pip install dist/*.tar.gz
           cd ..
           python -m pytest atom/tests
       - name: Store artifacts
@@ -49,6 +49,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Get history and tags for SCM versioning to work
+        run: |
+          git fetch --prune --unshallow
+          git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
