--- a/tests/typing/test_list.yml
+++ b/tests/typing/test_list.yml
@@ -59,39 +59,42 @@
     member_type: atom.list.List[Union[builtins.int, builtins.str]]
     member_value_type: builtins.list*[Union[builtins.int*, builtins.str*]]
   - member: List
-    member_instance: List((int, str, bytes), default=[1])
-    member_type: atom.list.List[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: List((int, str, Z), default=[1])
+    member_type: atom.list.List[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: List
-    member_instance: List((int, str, bytes), default=[str(1)])
-    member_type: atom.list.List[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: List((int, str, Z), default=[str(1)])
+    member_type: atom.list.List[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: List
-    member_instance: List((int, str, bytes), default=[bytes(1)])
-    member_type: atom.list.List[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: List((int, str, Z), default=[Z()])
+    member_type: atom.list.List[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: List
-    member_instance: List((int, str, bytes), default=[1, str(1)])
-    member_type: atom.list.List[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: List((int, str, Z), default=[1, str(1)])
+    member_type: atom.list.List[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: List
-    member_instance: List((int, str, bytes), default=[1, bytes(1)])
-    member_type: atom.list.List[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: List((int, str, Z), default=[1, Z()])
+    member_type: atom.list.List[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: List
-    member_instance: List((int, str, bytes), default=[str(1), bytes(1)])
-    member_type: atom.list.List[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: List((int, str, Z), default=[str(1), Z()])
+    member_type: atom.list.List[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: List
-    member_instance: List((int, str, bytes), default=[1, str(1), bytes(1)])
-    member_type: atom.list.List[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: List((int, str, Z), default=[1, str(1), Z()])
+    member_type: atom.list.List[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: List, Int
     member_instance: List(Int(), default=[2])
     member_type: atom.list.List[builtins.int]
     member_value_type: builtins.list*[builtins.int*]
   main: |
     from atom.api import Atom, {{ member }}
+
+    class Z(Atom):
+      pass
 
     class A(Atom):
       m = {{ member_instance }}
@@ -154,39 +157,42 @@
     member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str]]
     member_value_type: builtins.list*[Union[builtins.int*, builtins.str*]]
   - member: ContainerList
-    member_instance: ContainerList((int, str, bytes), default=[1])
-    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: ContainerList((int, str, Z), default=[1])
+    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: ContainerList
-    member_instance: ContainerList((int, str, bytes), default=[str(1)])
-    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: ContainerList((int, str, Z), default=[str(1)])
+    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: ContainerList
-    member_instance: ContainerList((int, str, bytes), default=[bytes(1)])
-    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: ContainerList((int, str, Z), default=[Z()])
+    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: ContainerList
-    member_instance: ContainerList((int, str, bytes), default=[1, str(1)])
-    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: ContainerList((int, str, Z), default=[1, str(1)])
+    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: ContainerList
-    member_instance: ContainerList((int, str, bytes), default=[1, bytes(1)])
-    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: ContainerList((int, str, Z), default=[1, Z()])
+    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: ContainerList
-    member_instance: ContainerList((int, str, bytes), default=[str(1), bytes(1)])
-    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: ContainerList((int, str, Z), default=[str(1), Z()])
+    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: ContainerList
-    member_instance: ContainerList((int, str, bytes), default=[1, str(1), bytes(1)])
-    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, builtins.bytes*]]
+    member_instance: ContainerList((int, str, Z), default=[1, str(1), Z()])
+    member_type: atom.containerlist.ContainerList[Union[builtins.int, builtins.str, main.Z]]
+    member_value_type: builtins.list*[Union[builtins.int*, builtins.str*, main.Z*]]
   - member: ContainerList, Int
     member_instance: ContainerList(Int(), default=[2])
     member_type: atom.containerlist.ContainerList[builtins.int]
     member_value_type: builtins.list*[builtins.int*]
   main: |
     from atom.api import Atom, {{ member }}
+
+    class Z(Atom):
+      pass
 
     class A(Atom):
       m = {{ member_instance }}
