--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install https://github.com/nucleic/cppy/tarball/main
+          pip install git+https://github.com/nucleic/cppy@main
       - name: Install project
         run: |
           pip install .
@@ -107,7 +107,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install https://github.com/nucleic/cppy/tarball/main
+          pip install git+https://github.com/nucleic/cppy@main
       - name: Install project
         env:
           CPPFLAGS: --coverage
