--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,19 +25,16 @@ jobs:
           git fetch --prune --unshallow
           git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install https://github.com/nucleic/cppy/tarball/main
+          pip install -r docs/requirements.txt
       - name: Install project
         run: |
           pip install .
       - name: Install graphviz
-        uses: kamiazya/setup-graphviz@v1
-      - name: Install doc building tools
-        run: |
-          pip install sphinx sphinx_rtd_theme
+        uses: ts-graphviz/setup-graphviz@v1
       - name: Build documentation
         run: |
           mkdir docs_output;
