--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,3 @@
-sphinx==4.0.2
-https://github.com/nucleic/cppy/tarball/main
+sphinx>=4
+sphinx-rtd-theme>=1
+git+https://github.com/nucleic/cppy@main
