cis: ensure trigger pr build no matter the folder depth

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ on:
       - main
     paths:
       - .github/workflows/ci.yml
-      - atom/*
-      - tests/*
+      - "atom/**"
+      - "tests/**"
       - setup.py
 
 jobs:
