--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,26 +39,25 @@ jobs:
           pip install -r lint_requirements.txt
       - name: Isort
         run: |
-          isort atom -c
-          isort examples -c
-          isort tests -c
+          isort atom examples tests -c
       - name: Black
+        if: always()
         run: |
-          black atom --check
-          black examples --check
-          black tests --check
+          black atom examples tests --check
       - name: Flake8
+        if: always()
         run: |
-          flake8 atom
-          flake8 examples
-          flake8 tests
+          flake8 atom examples tests
       - name: Run Mypy
+        if: always()
         run: |
-          mypy atom
-          mypy examples
+          mypy atom examples
   types:
     name: Type checking
     runs-on: ubuntu-latest
+    needs:
+      - lint
+    if: needs.lint.result == 'success'
     strategy:
       matrix:
         python-version: ['3.8', '3.9']
@@ -90,10 +89,13 @@ jobs:
   tests:
     name: Unit tests
     runs-on: ${{ matrix.os }}
+    needs:
+      - lint
+    if: needs.lint.result == 'success'
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10']
     steps:
       - uses: actions/checkout@v2
       - name: Get history and tags for SCM versioning to work
