--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest-mypy-plugins regex
-          python -X dev -m pytest tests/typing -v
+          python -X dev -m pytest tests/type_checking -v
   tests:
     name: Unit tests
     runs-on: ${{ matrix.os }}
@@ -118,7 +118,7 @@ jobs:
       - name: Test with pytest
         run: |
           pip install -r test_requirements.txt
-          python -X dev -W error -m pytest tests --ignore=tests/typing --cov --cov-report xml -v
+          python -X dev -W error -m pytest tests --ignore=tests/type_checking --cov --cov-report xml -v
       - name: Generate C++ coverage reports
         if: (github.event_name != 'schedule' && matrix.os != 'windows-latest')
         run: |
