cis: fix triggers for CI pipelines

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,9 @@ on:
       - .github/workflows/ci.yml
       - "atom/**"
       - "tests/**"
+      - "examples/**"
       - setup.py
+      - pyproject.toml
 
 jobs:
   lint:
