--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ changelog = "https://github.com/nucleic/atom/blob/main/releasenotes.rst"
 
 
 [build-system]
-requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4.3", "cppy"]
+requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4.3", "cppy>=1.2.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
