--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        python: [37, 38, 39, 310]
+        python: [38, 39, 310]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -53,8 +53,6 @@ jobs:
           git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Setup Python
         uses: actions/setup-python@v2
-        with:
-          python-version: '3.8'
       - name: Install cibuildwheel
         run: |
           python -m pip install --upgrade pip
