--- a/tests/type_checking/test_coerced.yml
+++ b/tests/type_checking/test_coerced.yml
@@ -10,23 +10,23 @@
     - member: Coerced
       member_instance: Coerced(int)
       member_type: atom.coerced.Coerced[builtins.int, builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Coerced
       member_instance: Coerced(int, ())
       member_type: atom.coerced.Coerced[builtins.int, builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Coerced
       member_instance: Coerced(io.StringIO, None, dict(initial_value=str(1)))
       member_type: atom.coerced.Coerced[io.StringIO, io.StringIO]
-      member_value_type: io.StringIO*
+      member_value_type: io.StringIO
     - member: Coerced
       member_instance: Coerced(io.StringIO, kwargs=dict(initial_value=str(1)))
       member_type: atom.coerced.Coerced[io.StringIO, io.StringIO]
-      member_value_type: io.StringIO*
+      member_value_type: io.StringIO
     - member: Coerced
       member_instance: Coerced(io.StringIO, factory=g)
       member_type: atom.coerced.Coerced[io.StringIO, io.StringIO]
-      member_value_type: io.StringIO*
+      member_value_type: io.StringIO
   main: |
     import io
     from typing import Type
@@ -47,23 +47,23 @@
     - member: Coerced
       member_instance: Coerced(io.StringIO, coercer=coercer)
       member_type: atom.coerced.Coerced[io.StringIO, Union[io.StringIO, builtins.str]]
-      member_value_type: io.StringIO*
+      member_value_type: io.StringIO
     - member: Coerced
       member_instance: Coerced(io.StringIO, (), coercer=coercer)
       member_type: atom.coerced.Coerced[io.StringIO, Union[io.StringIO, builtins.str]]
-      member_value_type: io.StringIO*
+      member_value_type: io.StringIO
     - member: Coerced
       member_instance: Coerced(io.StringIO, None, dict(initial_value=str(1)), coercer=coercer)
       member_type: atom.coerced.Coerced[io.StringIO, Union[io.StringIO, builtins.str]]
-      member_value_type: io.StringIO*
+      member_value_type: io.StringIO
     - member: Coerced
       member_instance: Coerced(io.StringIO, kwargs=dict(initial_value=str(1)), coercer=coercer)
       member_type: atom.coerced.Coerced[io.StringIO, Union[io.StringIO, builtins.str]]
-      member_value_type: io.StringIO*
+      member_value_type: io.StringIO
     - member: Coerced
       member_instance: Coerced(io.StringIO, factory=g, coercer=coercer)
       member_type: atom.coerced.Coerced[io.StringIO, Union[io.StringIO, builtins.str]]
-      member_value_type: io.StringIO*
+      member_value_type: io.StringIO
   main: |
     import io
     from typing import Type
