--- a/tests/type_checking/test_scalars.yml
+++ b/tests/type_checking/test_scalars.yml
@@ -18,43 +18,43 @@
     - member: ReadOnly
       member_instance: ReadOnly(default=0)
       member_type: atom.scalars.ReadOnly[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: ReadOnly
       member_instance: ReadOnly(factory=g)
       member_type: atom.scalars.ReadOnly[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: ReadOnly
       member_instance: ReadOnly(int)
       member_type: atom.scalars.ReadOnly[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: ReadOnly
       member_instance: ReadOnly(int, default=0)
       member_type: atom.scalars.ReadOnly[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: ReadOnly
       member_instance: ReadOnly(int, factory=g)
       member_type: atom.scalars.ReadOnly[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: ReadOnly
       member_instance: ReadOnly((int,))
       member_type: atom.scalars.ReadOnly[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: ReadOnly
       member_instance: ReadOnly((int,), default=0)
       member_type: atom.scalars.ReadOnly[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: ReadOnly
       member_instance: ReadOnly((int,), factory=g)
       member_type: atom.scalars.ReadOnly[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: ReadOnly
       member_instance: ReadOnly((int, str))
       member_type: atom.scalars.ReadOnly[Union[builtins.int, builtins.str]]
-      member_value_type: Union[builtins.int*, builtins.str*]
+      member_value_type: Union[builtins.int, builtins.str]
     - member: ReadOnly
       member_instance: ReadOnly((int, str), default=0)
       member_type: atom.scalars.ReadOnly[Union[builtins.int, builtins.str]]
-      member_value_type: Union[builtins.int*, builtins.str*]
+      member_value_type: Union[builtins.int, builtins.str]
     - member: ReadOnly
       member_instance: ReadOnly((int, str), factory=g)
       member_type: atom.scalars.ReadOnly[Union[builtins.int, builtins.str]]
@@ -62,11 +62,11 @@
     - member: ReadOnly
       member_instance: ReadOnly((int, str, float))
       member_type: atom.scalars.ReadOnly[Union[builtins.str, builtins.float]]
-      member_value_type: Union[builtins.str*, builtins.float*]
+      member_value_type: Union[builtins.str, builtins.float]
     - member: ReadOnly
       member_instance: ReadOnly((int, str, float), default=0)
       member_type: atom.scalars.ReadOnly[Union[builtins.str, builtins.float]]
-      member_value_type: Union[builtins.str*, builtins.float*]
+      member_value_type: Union[builtins.str, builtins.float]
     - member: ReadOnly
       member_instance: ReadOnly((int, str, float), factory=g)
       member_type: atom.scalars.ReadOnly[Union[builtins.str, builtins.float]]
@@ -78,43 +78,43 @@
     - member: Constant
       member_instance: Constant(0)
       member_type: atom.scalars.Constant[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Constant
       member_instance: Constant(factory=g)
       member_type: atom.scalars.Constant[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Constant
       member_instance: Constant(kind=int)
       member_type: atom.scalars.Constant[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Constant
       member_instance: Constant(0, kind=int)
       member_type: atom.scalars.Constant[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Constant
       member_instance: Constant(factory=g, kind=int)
       member_type: atom.scalars.Constant[builtins.int]
-      member_value_type:  builtins.int*
+      member_value_type:  builtins.int
     - member: Constant
       member_instance: Constant(kind=(int,))
       member_type: atom.scalars.Constant[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Constant
       member_instance: Constant(0, kind=(int,))
       member_type: atom.scalars.Constant[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Constant
       member_instance: Constant(factory=g, kind=(int,))
       member_type: atom.scalars.Constant[builtins.int]
-      member_value_type:  builtins.int*
+      member_value_type:  builtins.int
     - member: Constant
       member_instance: Constant(kind=(int, str))
       member_type: atom.scalars.Constant[Union[builtins.int, builtins.str]]
-      member_value_type: Union[builtins.int*, builtins.str*]
+      member_value_type: Union[builtins.int, builtins.str]
     - member: Constant
       member_instance: Constant(0, kind=(int,str))
       member_type: atom.scalars.Constant[Union[builtins.int, builtins.str]]
-      member_value_type: Union[builtins.int*, builtins.str*]
+      member_value_type: Union[builtins.int, builtins.str]
     - member: Constant
       member_instance: Constant(factory=g, kind=(int, str))
       member_type: atom.scalars.Constant[Union[builtins.int, builtins.str]]
@@ -122,11 +122,11 @@
     - member: Constant
       member_instance: Constant(kind=(int, str, float))
       member_type: atom.scalars.Constant[Union[builtins.str, builtins.float]]
-      member_value_type: Union[builtins.str*, builtins.float*]
+      member_value_type: Union[builtins.str, builtins.float]
     - member: Constant
       member_instance: Constant(0, kind=(int, str, float))
       member_type: atom.scalars.Constant[Union[builtins.str, builtins.float]]
-      member_value_type: Union[builtins.str*, builtins.float*]
+      member_value_type: Union[builtins.str, builtins.float]
     - member: Constant
       member_instance: Constant(factory=g, kind=(int, str, float))
       member_type: atom.scalars.Constant[Union[builtins.str, builtins.float]]
@@ -134,48 +134,48 @@
     - member: Bool
       member_instance: Bool()
       member_type: atom.scalars.Bool[builtins.bool]
-      member_value_type: builtins.bool*
+      member_value_type: builtins.bool
     - member: Int
       member_instance: Int()
       member_type: atom.scalars.Int[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Int
       member_instance: Int(strict=False)
       member_type: atom.scalars.Int[builtins.float]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Int
       member_instance: Int(factory=f, strict=False)
       member_type: atom.scalars.Int[builtins.float]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     # XXX add strict cases
     - member: FloatRange
       member_instance: FloatRange()
       member_type: atom.scalars.FloatRange[builtins.float]
-      member_value_type: builtins.float*
+      member_value_type: builtins.float
     - member: Range
       member_instance: Range()
       member_type: atom.scalars.Range[builtins.int]
-      member_value_type: builtins.int*
+      member_value_type: builtins.int
     - member: Float
       member_instance: Float()
       member_type: atom.scalars.Float[builtins.float]
-      member_value_type: builtins.float*
+      member_value_type: builtins.float
     - member: Bytes
       member_instance: Bytes(strict=False)
       member_type: atom.scalars.Bytes[Union[builtins.bytes, builtins.str]]
-      member_value_type: builtins.bytes*
+      member_value_type: builtins.bytes
     - member: Bytes
       member_instance: Bytes()
       member_type: atom.scalars.Bytes[builtins.bytes]
-      member_value_type: builtins.bytes*
+      member_value_type: builtins.bytes
     - member: Str
       member_instance: Str(strict=False)
       member_type: atom.scalars.Str[Union[builtins.str, builtins.bytes]]
-      member_value_type: builtins.str*
+      member_value_type: builtins.str
     - member: Str
       member_instance: Str()
       member_type: atom.scalars.Str[builtins.str]
-      member_value_type: builtins.str*
+      member_value_type: builtins.str
   main: |
     from atom.api import Atom, {{ member }}
 
@@ -209,7 +209,7 @@
       m = Str('', strict=True)
 
     reveal_type(A.m)  # N: Revealed type is "atom.scalars.Str[builtins.str]"
-    reveal_type(A().m)  # N: Revealed type is "builtins.str*"
+    reveal_type(A().m)  # N: Revealed type is "builtins.str"
 
 - case: bytes-with-default
   main: |
@@ -219,7 +219,7 @@
       m = Bytes(b"", strict=True)
 
     reveal_type(A.m)  # N: Revealed type is "atom.scalars.Bytes[builtins.bytes]"
-    reveal_type(A().m)  # N: Revealed type is "builtins.bytes*"
+    reveal_type(A().m)  # N: Revealed type is "builtins.bytes"
 
 
 # XXX add tests with explicit annotations
