--- a/tests/type_checking/test_tuple.yml
+++ b/tests/type_checking/test_tuple.yml
@@ -11,85 +11,85 @@
   - member: Tuple
     member_instance: Tuple()
     member_type: atom.tuple.Tuple[Any]
-    member_value_type: builtins.tuple*[Any, ...]
+    member_value_type: builtins.tuple[Any, ...]
   - member: Tuple
     member_instance: Tuple(int)
     member_type: atom.tuple.Tuple[builtins.int]
-    member_value_type: builtins.tuple*[builtins.int*, ...]
+    member_value_type: builtins.tuple[builtins.int, ...]
   - member: Tuple
     member_instance: Tuple((int,))
     member_type: atom.tuple.Tuple[builtins.int]
-    member_value_type: builtins.tuple*[builtins.int*, ...]
+    member_value_type: builtins.tuple[builtins.int, ...]
   - member: Tuple
     member_instance: Tuple((int, float))
     member_type: atom.tuple.Tuple[builtins.float]
-    member_value_type: builtins.tuple*[builtins.float*, ...]
+    member_value_type: builtins.tuple[builtins.float, ...]
   - member: Tuple
     member_instance: Tuple((int, float, str))
     member_type: atom.tuple.Tuple[Union[builtins.float, builtins.str]]
-    member_value_type: builtins.tuple*[Union[builtins.float*, builtins.str*], ...]
+    member_value_type: builtins.tuple[Union[builtins.float, builtins.str], ...]
   - member: Tuple, Int
     member_instance: Tuple(Int())
     member_type: atom.tuple.Tuple[builtins.int]
-    member_value_type: builtins.tuple*[builtins.int*, ...]
+    member_value_type: builtins.tuple[builtins.int, ...]
   # Tuple with defaults
   - member: Tuple
     member_instance: Tuple(default=(1,))
     member_type: atom.tuple.Tuple[Any]
-    member_value_type: builtins.tuple*[Any, ...]
+    member_value_type: builtins.tuple[Any, ...]
   - member: Tuple
     member_instance: Tuple(int, default=(3,))
     member_type: atom.tuple.Tuple[builtins.int]
-    member_value_type: builtins.tuple*[builtins.int*, ...]
+    member_value_type: builtins.tuple[builtins.int, ...]
   - member: Tuple
     member_instance: Tuple((int,), default=(1, 2))
     member_type: atom.tuple.Tuple[builtins.int]
-    member_value_type: builtins.tuple*[builtins.int*, ...]
+    member_value_type: builtins.tuple[builtins.int, ...]
   # Ensure that for tuple of types any valid default works
   - member: Tuple
     member_instance: Tuple((int, str), default=(1,))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str], ...]
   - member: Tuple
     member_instance: Tuple((int, str), default=(str(1),))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str], ...]
   - member: Tuple
     member_instance: Tuple((int, str), default=(1, str(1)))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str], ...]
   - member: Tuple
     member_instance: Tuple((int, str, bytes), default=(1,))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*, builtins.bytes*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str, builtins.bytes], ...]
   - member: Tuple
     member_instance: Tuple((int, str, bytes), default=(str(1),))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*, builtins.bytes*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str, builtins.bytes], ...]
   - member: Tuple
     member_instance: Tuple((int, str, bytes), default=(bytes(1),))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*, builtins.bytes*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str, builtins.bytes], ...]
   - member: Tuple
     member_instance: Tuple((int, str, bytes), default=(1, str(1),))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*, builtins.bytes*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str, builtins.bytes], ...]
   - member: Tuple
     member_instance: Tuple((int, str, bytes), default=(1, bytes(1),))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*, builtins.bytes*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str, builtins.bytes], ...]
   - member: Tuple
     member_instance: Tuple((int, str, bytes), default=(str(1), bytes(1)))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*, builtins.bytes*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str, builtins.bytes], ...]
   - member: Tuple
     member_instance: Tuple((int, str, bytes), default=(1, str(1), bytes(1)))
     member_type: atom.tuple.Tuple[Union[builtins.int, builtins.str, builtins.bytes]]
-    member_value_type: builtins.tuple*[Union[builtins.int*, builtins.str*, builtins.bytes*], ...]
+    member_value_type: builtins.tuple[Union[builtins.int, builtins.str, builtins.bytes], ...]
   - member: Tuple, Int
     member_instance: Tuple(Int(), default=(2,))
     member_type: atom.tuple.Tuple[builtins.int]
-    member_value_type: builtins.tuple*[builtins.int*, ...]
+    member_value_type: builtins.tuple[builtins.int, ...]
   main: |
     from atom.api import Atom, {{ member }}
 
